# axum-sse

./: .gitignore  Cargo.toml  README.md  build.rs  clippy.toml  rustfmt.toml
.github/: copilot-instructions.md
.specify/memory/: constitution.md
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.html
frontend/src/routes/: +layout.svelte  +page.svelte
specs/001-experimental-application-to/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-experimental-application-to/contracts/: api-spec.yaml
specs/002-the-user-interface/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-the-status-page/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: lib.rs  main.rs  services.rs
src/middleware/: logging.rs  mod.rs  security.rs
src/models/: connection_state.rs  cpu_metrics.rs  health_status.rs  memory_metrics.rs  metrics_errors.rs  mod.rs  network_metrics.rs  os_info.rs  server_metrics.rs  status_data.rs  time_event.rs
src/routes/: api.rs  mod.rs  pages.rs  server_status.rs  server_status_stream.rs  sse.rs  static_routes.rs
src/services/: metrics_cache.rs  metrics_service.rs  sse_service.rs  static_service.rs
tests/: test_health.rs  test_os_info_api.rs  test_os_info_validation.rs  test_server_status_os_info.rs  test_sse_stream.rs  test_static_routes.rs  test_status_page_os.rs  test_user_journey.rs
tests/contract/: server_status_get.rs  server_status_stream.rs
tests/integration/: metrics_collection.rs  sse_streaming.rs
(+8 files in other folders)
