[package]
name = "axum-sse"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework and async runtime
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization and time handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

# Error handling
thiserror = "1.0"

# Static asset embedding
include_dir = "0.7"

# Async utilities
futures = "0.3"
futures-util = "0.3"

# System metrics collection
sysinfo = "0.30"

# System information
hostname = "0.3"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Development dependencies
[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"
axum-test = "14.0"

[build-dependencies]
# For frontend build integration
walkdir = "2.4"

[[bin]]
name = "axum-sse"
path = "src/main.rs"